# slide-deck

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  research.md
.claude/skills/: slide-deck.md
examples/: 01_consulting_supply_chain.md  02_startup_edutech.md  03_academic_microplastics.md  04_finance_esg.md  05_tech_microservices.md  06_government_ai_governance.md  07_healthcare_telemedicine.md  08_creative_brand.md  09_minimal_deep_work.md  10_dark_developer_portal.md  arxiv_signature_method.md  ml_monitoring.md
slides/: __init__.py  api.py  compiler.py  model.py  parser.py  renderer.py  selector.py  theme.py
slides/templates/: deck.tex.j2
slides/templates/slides/: agenda_slide.tex.j2  chart_placeholder_slide.tex.j2  closing_slide.tex.j2  content_slide.tex.j2  quote_slide.tex.j2  scr_narrative_slide.tex.j2  section_slide.tex.j2  stats_slide.tex.j2  table_slide.tex.j2  timeline_slide.tex.j2  title_slide.tex.j2  two_column_slide.tex.j2
tests/: test_api.py  test_parser.py  test_selector.py  test_themes.py
