[project]
name = "slide-deck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.105.2",
    "click>=8.4.1",
    "jinja2>=3.1.6",
    "pydantic>=2.13.4",
    "rich>=15.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]
